# UpTrader-test-task

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
tree_menu/: admin.py  apps.py  models.py  urls.py  views.py
tree_menu/migrations/: 0001_initial.py
tree_menu/static/tree_menu/css/: menu.css
tree_menu/static/tree_menu/js/: menu.js
tree_menu/templates/tree_menu/: index.html  menu.html
tree_menu/templatetags/: menu_tags.py
